--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   },
   "license": "MIT",
   "bugs": {
-    "url":"https://github.com/sbemjr1/wetube/issues"
+    "url": "https://github.com/sbemjr1/wetube/issues"
   },
   "homepage": "https://github.com/sbemjr1/wetube#readme",
   "dependencies": {
     "@ffmpeg/core": "^0.11.0",
     "@ffmpeg/ffmpeg": "^0.11.6",
+    "aws-sdk": "^2.1381.0",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
@@ -32,6 +33,7 @@
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "node-fetch": "^2.6.1",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.13.11"
@@ -53,6 +55,6 @@
   },
   "engines": {
     "node": "18.14.0",
-    "npm" : "9.3.1"
-    }
+    "npm": "9.3.1"
+  }
 }
